Solve the vertical-align issue for medias

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,7 +36,7 @@ img,
 video {
   max-inline-size: 100%;
   block-size: auto;
-  vertical-align: text-top;
+  vertical-align: middle;
 }
 
 /* ====================================
